# voice-agent-ai

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
schemas/: chat_schemas.py
services/: assemblyai_service.py  gemini_service.py  murf_service.py
static/: index.js  script.js  styles.css
templates/: index.html
utils/: chat_history.py  connection_manager.py
